Chapter 2 and 3 spring intro and spring data

--- a/ch2/src/main/resources/templates/index.mustache
+++ b/ch2/src/main/resources/templates/index.mustache
@@ -4,6 +4,20 @@
     a web app using Spring Boot 3.0
 </p>
 
+<form action="/multi-field-search" method="post">
+    <label for="name">Name:</label>
+    <input type="text" name="name">
+    <label for="description">Description:</label>
+    <input type="text" name="description">
+    <button type="submit">Search</button>
+</form>
+
+<form action="/universal-search" method="post">
+    <label for="value">Search:</label>
+    <input type="text" name="value">
+    <button type="submit">Search</button>
+</form>
+
 <ul>
     {{#videos}}
         <li>{{name}}</li>
